--- a/_posts/2019-12-27-the-us-narrative-today.html
+++ b/_posts/2019-12-27-the-us-narrative-today.html
@@ -1568,107 +1568,107 @@ stories:
   domain: http://themountainmail.com/
   link: http://www.themountainmail.com/free_content/image_1034fb82-28ce-11ea-9737-831718499e65.html
 images:
-- name: san-francisco-city-bridge-sf-city-bridge-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-gred-mash.jpg
-- name: rain-princess-cemetery_35902984304_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-cemetery_35902984304_o.jpg
-- name: razorcliff-razorcliff-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-satan-red.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-atari-missle.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-spagetti-accident.jpg
-- name: machine-road-machine-road-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-blue-granite.jpg
-- name: mosaic-face-mosaic-face-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-emily-carr.jpg
-- name: school-clouds-church-clouds-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-crafty-painting.jpg
-- name: hollywood-building-hollywood-building-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-crunch-paper.jpg
-- name: stalin-time-gypsy-house-with-pen.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-gypsy-house-with-pen.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-pablo-blue.jpg
-- name: yosemite-yosemite-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-light-dali.jpg
-- name: border-fence-border-fence-on-hill-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-nazi-poster.jpg
-- name: gypsy-wagon-gypsywagon-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-colored-circuits.jpg
-- name: windowmountain-window-mountain-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-smooth-ride.jpg
-- name: mosaic-face-mosaic-face-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-creativity.jpg
-- name: castle-wall-DSC-0067-deep-connections.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-deep-connections.JPG
-- name: berlinwall-DSC-0084-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-colorful-blocks.jpg
-- name: ellis-island-ellisisland-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-sunday.jpg
-- name: oldcabin-oldcabin-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-gred-mash.jpg
-- name: border-fence-border-fence-on-hill-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-space-pizza.jpg
-- name: adam-smith-adam-smith-jap-wav-pr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-jap-wav-pr.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-umberto-bocc.jpg
-- name: oldhousecars-house-old-cars-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-colorful-blocks.jpg
-- name: oldbarn-oldbarn-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-satan-red.jpg
-- name: old-door-lock-old-door-lock-2-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-bright-sand.jpg
-- name: aws-s3-square-77-33-800-500-0-max-0--5--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-77-33-800-500-0-max-0--5--1.jpg
-- name: razorcliff-razorcliff-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-far-away.jpg
-- name: braceros-domingo-ulloa-close-to-all-remote-aircraft.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-close-to-all-remote-aircraft.jpg
-- name: san-francisco-street-view-san-francisco-street-view-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-crabapple.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-dali-two.jpg
-- name: crow_dark_soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_dark_soul.jpg
-- name: oldhouse-granaryfield-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-colored-circuits.jpg
-- name: stalin-time-old-ship-waterfront-harbor.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-ship-waterfront-harbor.jpg
-- name: gypsymosaic-gypsy-eyes-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-dali-three.jpg
-- name: aws-s3-goldsilverfalls-goldsilverfalls-still-1200.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-goldsilverfalls-goldsilverfalls-still-1200.jpg
-- name: subway-subway-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-internet-numbers.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-pablo-blue.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-pablo-blue.JPG
-- name: castle-wall-DSC-0067-horiz-circuit.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-horiz-circuit.JPG
-- name: cargo-ship-cargo-ship-on-sea-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-pablo-blue.jpg
-- name: ellis-island-ellisisland-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-crunch-paper.jpg
-- name: bluelake-clean-view-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-clean-view-file-00-00-00-00.jpg
-- name: trucksilo-trucksilo-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-bright-sand.jpg
-- name: berlinwall2-berlinwall-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-hot-spicy.jpg
-- name: rockingchair-face-2-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-colored-circuits.jpg
-- name: machine-road-machine-road-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-colorful-blocks.jpg
-- name: san-francisco-street-view-san-francisco-street-view-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-yellow-collage.jpg
-- name: copper-circuit-old-train-on-tracks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-old-train-on-tracks.jpg
-- name: nazi-invasion-statue-of-liberty-front-bright.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-statue-of-liberty-front-bright.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-wols.jpg
-- name: fence-mexico-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-colored-circuits.jpg
+- name: dc-statue-dcstatue-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-monet-one.jpg
+- name: legal-statue-legalstatue-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-internet-numbers.jpg
+- name: nyc-flag-nycflag-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-light-dali.jpg
+- name: amusement-park-amusement-park-2-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-spagetti-accident.jpg
+- name: docks-docks-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-umberto-bocc.jpg
+- name: walled-garden-walled-garden-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-monet-one.jpg
+- name: windowmountain-window-mountain-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-yellow-collage.jpg
+- name: gypsymosaic-gypsy-eyes-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-dali-two.jpg
+- name: docks-docks-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-bright-sand.jpg
+- name: beach-clouds-lifeguard-beachclouds-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-gan-vogh.jpg
+- name: carry-load-carryload-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-alien-goggles.jpg
+- name: stalin-time-supreme-court_36341562380_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-supreme-court_36341562380_o.jpg
+- name: copper-circuit-IMG_8494.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_8494.jpg
+- name: store-on-corner-oldcabin-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-really-hot.jpg
+- name: store-on-corner-store-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-blue-circuit.jpg
+- name: white-house-lawn-white-house-lawn-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-smooth-ride.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-deep-connections.jpg
+- name: trucksilo-trucksilo-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-crabapple.jpg
+- name: diamondcreek-diamondcreek-still-600.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/diamondcreek-diamondcreek-still-600.jpg
+- name: oldroad-old-road.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road.jpg
+- name: christianity-christianity-under-construction-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-blue-granite.jpg
+- name: docks-docks-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-atari-missle.jpg
+- name: hollywood-building-hollywood-building-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-blue-circuit-5.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-dali-three.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-dali-three.png
+- name: nazi-invasion-statue-supreme-court.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-statue-supreme-court.jpg
+- name: carry-load-carryload-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-light-dali.jpg
+- name: oldcabin-store-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-green-zuma.jpg
+- name: gypsy-wagon-gypsywagon-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-yellow-paper.jpg
+- name: san-francisco-street-view-san-francisco-street-view-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-space-pizza.jpg
+- name: oldbarn-oldbarn-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-plentiful.jpg
+- name: dc-statue-dcstatue-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-gan-vogh.jpg
+- name: border-fence-border-fence-on-hill.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill.jpg
+- name: downtown-los-angeles-downtown-la-satan-red.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-satan-red.JPG
+- name: old-school-house-old-schoolhouse-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-blue-granite.jpg
+- name: nyc-flag-nycflag-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-hot-spicy.jpg
+- name: gears-4882162452-fa3126b38d-b-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-rainbow-festival.jpg
+- name: dc-statue-dcstatue-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-purple-pond.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-blue-circuit-3.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-blue-circuit-3.png
+- name: old-cabin-oldcabin-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-kandinsky-bv.jpg
+- name: eduardo-eduardo-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-bright-sand.jpg
+- name: gears-4882162452-fa3126b38d-b-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-sunday.jpg
+- name: nyc-flag-api-conversations-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-api-conversations-aqua.jpg
+- name: store-on-corner-store-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-cinnamon-rolls.jpg
+- name: abandonedbuildings_smooth_ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_smooth_ride.jpg
+- name: bordercrossing-bordercrossing-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-dark-dali.jpg
+- name: white-house-lawn-white-house-window-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-purple-storm.jpg
+- name: nazi-invasion-pink-elephant-car-wash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-pink-elephant-car-wash.jpg
+- name: liberty-back-statue-liberty-back-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-blue-brush.jpg
+- name: old-granary-field-granaryfield-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-oily-mcoilface.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-neo-instinct.jpg
+- name: berlinwall-DSC-0084-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-crabapple.jpg
 ---
 Online Marketing Creates Opportunities For Real Businesses.&nbsp;Pimento Pepper Still Hot For Hoosier Hoops.&nbsp;Long Wait List For Waiver Program Unacceptable.&nbsp;Vancouver Mayor Appointed To State Tax Structure Work Group.&nbsp;We Found Sound Postpones Shows.&nbsp;Winning Numbers Drawn In 'All Or Nothing Evening' Game.&nbsp;William Bill Calvin Farmer.&nbsp;For The Rest Of Us.&nbsp;
